--- a/style.css
+++ b/style.css
@@ -1,7 +1,43 @@
 body {
-  background-color: rgb(33, 33, 33);
+	background-color: rgb(33, 33, 33);
 }
 h1 {
-  color: rgb(255, 99, 71);
+	color: rgb(255, 99, 71);
+	text-align: center;
+}
+
+h2 {
+	color: rgb(202, 213, 226);
+}
+
+p {
+	color: rgb(202, 213, 226);
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
   text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: rgb(194, 61, 37);
 }
