add nojekyll and additional code for art page

--- a/style.css
+++ b/style.css
@@ -49,6 +49,13 @@ p {
 	font-weight: 300; 
 }
 
+.font_s15w300 {
+	color: rgb(202, 213, 226);
+	font-size: 15px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300; 
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #333;
