--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ p {
 	color: rgb(202, 213, 226);
 	font-size: 15px;
 	font-family: 'Roboto', sans-serif;
-	font-weight: 300; 
+	font-weight: 300;
+	text-align: justify;	
 }
 
 .font_s15w300 {
